feat: :sparkles: Add timestamp
